project (glew)

#####################################################
# ARibeiro Lib Setup
#####################################################
# global definitions
add_definitions_global(-DGLEW_STATIC)
#####################################################


set( PUBLIC_HEADERS
		src/eglew.h
		src/glew.h
		src/glxew.h
		src/wglew.h
		)

set( PRIVATE_HEADERS )

set( SRC src/glew.c )

add_library( ${PROJECT_NAME} STATIC ${PUBLIC_HEADERS} ${PRIVATE_HEADERS} ${SRC} )

# set the target's folder (for IDEs that support it, e.g. Visual Studio)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "LIBS")

copy_headers_to_include_directory(${PROJECT_NAME} ${PUBLIC_HEADERS})
